# fpgk8s

./: Cargo.toml  README.md
docs/dev/: PROTOCOLS.md
k8s-deviceplugin/: Cargo.toml  README.md  build.rs
k8s-deviceplugin/proto/: v1alpha.proto  v1beta1.proto
k8s-deviceplugin/src/: deviceplugin.rs  lib.rs  v1beta1.rs
plugin/: Cargo.toml
plugin/src/: main.rs
