[package]
name = "k8s-deviceplugin"
version = "0.1.0"
license = "Apache-2.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
edition = "2018"
repository = "https://github.com/hasheddan/fpgk8s"
homepage = "https://github.com/hasheddan/fpgk8s"
documentation = "https://docs.rs/k8s-deviceplugin/0.1.0/k8s_deviceplugin/"
readme = "README.md"
description = """
API bindings for Kubernetes device plugins.
"""
categories = ["kubernetes", "bindings"]
keywords = ["kubernetes", "k8s", "device", "plugin"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"
