[package]
name = "plugin"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-deviceplugin = { path = "../k8s-deviceplugin" }
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4" }
