[package]
name = "plugin"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
edition = "2021"

[dependencies]
k8s-deviceplugin = { path = "../k8s-deviceplugin" }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4" }
